rt/test/errors/003/test.volt
//T macro:expect-failure
//T check:5:16: error: expected
module test;

fn isSet(string key) void {}

fn main() i32
{
	return 0;
}
